role based authentication completed.
role based authentication completed and some improvements  done

--- a/userTerminalManagement-service/src/main/resources/application.properties
+++ b/userTerminalManagement-service/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.application.name=userTerminalManagement-service
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
 
+management.tracing.sampling.probability=1.0
 
