--- a/carDefect-service/src/main/resources/application.properties
+++ b/carDefect-service/src/main/resources/application.properties
@@ -16,3 +16,5 @@ server.port=8082
 spring.application.name=cardefect-service
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+
+management.tracing.sampling.probability=1.0
