--- a/carDefect-service/src/main/resources/application.properties
+++ b/carDefect-service/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.application.name=cardefect-service
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
 
+spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
