project packages updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - "8080:8080"
     environment:
       eureka.client.service-url.defaultZone: http://eureka-server:8761/eureka
+      SPRING_ZIPKIN_BASE_URL: http://zipkin:9411
     depends_on:
       - zipkin
     networks:
@@ -52,13 +53,13 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: Selcuk25
       eureka.client.service-url.defaultZone: http://eureka-server:8761/eureka
-      SPRING_ZIPKIN_BASEURL: http://zipkin:9411
+      SPRING_ZIPKIN_BASE_URL: http://zipkin:9411
     depends_on:
       - db
       - eureka-server
       - zipkin
     volumes:
-      - ./src/main/resources:/app/resources
+      - ./data:/app/resources
     networks:
       - my-network
 
@@ -71,13 +72,13 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: Selcuk25
       eureka.client.service-url.defaultZone: http://eureka-server:8761/eureka
-      SPRING_ZIPKIN_BASEURL: http://zipkin:9411
+      SPRING_ZIPKIN_BASE_URL: http://zipkin:9411
     depends_on:
       - db
       - eureka-server
       - zipkin
     volumes:
-      - ./src/main/resources:/app/resources
+      - ./data:/app/resources
     networks:
       - my-network
 
@@ -90,13 +91,13 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: Selcuk25
       eureka.client.service-url.defaultZone: http://eureka-server:8761/eureka
-      SPRING_ZIPKIN_BASEURL: http://zipkin:9411
+      SPRING_ZIPKIN_BASE_URL: http://zipkin:9411
     depends_on:
       - db
       - eureka-server
       - zipkin
     volumes:
-      - ./src/main/resources:/app/resources
+      - ./data:/app/resources
     networks:
       - my-network
 
