--- a/carDefect-service/Dockerfile
+++ b/carDefect-service/Dockerfile
@@ -3,5 +3,6 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
 COPY target/carDefect-service-0.0.1-SNAPSHOT.jar .
+COPY src/main/resources/log4j2.xml /app/log4j2.xml
 
 CMD ["java", "-jar", "carDefect-service-0.0.1-SNAPSHOT.jar"]
