service responses updated

--- a/carDefect-service/pom.xml
+++ b/carDefect-service/pom.xml
@@ -161,6 +161,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>
+						<name>microservice</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+					
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
